templates/barracuda-waf-workload.template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: BWAF 10.1 BYOL
Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names. This string can include
     numbers, lowercase letters, and hyphens (-). It cannot start or end with a hyphen (-)
    Type: String
    AllowedPattern: '^$|[0-9a-z-]*'
  LicenseBucket:
    AllowedPattern: '[0-9a-z-]*' #^$|^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: The S3 bucket with your Barracuda CloudGen WAF License files.
    Description: S3 bucket name for the Quick Start assets. This string can include
     numbers, lowercase letters, and hyphens (-). It cannot start or end with a hyphen (-).
    Type: String
    Default: ''
  CudaLicenseSubDir:
    Type: String
    AllowedPattern: "[^\\s]*"
    Description: 'Specify the folder on the specified License S3 Bucket which contains
      the BYOL License File. Leave blank if there is no specific folder for Licenses
      on the S3 Bucket. Examples: Barracuda/Licenses(Two level folder structure),
      BarracudaBYOLLicenses(One level folder structure).'
  CudaBackupSubDir:
    Type: String
    AllowedPattern: '[^\s]*'
    Description: 'Specify the folder on the specified Bootstrapping S3 Bucket which
        contains the Backup File. Leave blank if there is no specific folder for Backups
        on the S3 Bucket. Examples: Barracuda/WAFBackups(Two level folder structure),
        BarracudaWAFBackup(One level folder structure).'
    Default: ''
  BackupFileName:
    Type: String
    Description: Backup filename which needs to be restored on WAF when it boots up. Ex. BAR-WF-1348428-10.1.0.015-20200803232439-C-Manual_Backup.bak
    Default: ''
  BootstrappingS3Bucket:
    Type: String
    Description: S3 Bucket which has the backups in it.
  KeyPairName:
    Description: The name of an existing public/private key pair, which allows you
      to securely connect to your instance after it launches
    Type: AWS::EC2::KeyPair::KeyName
  VPCID:
    Type: "AWS::EC2::VPC::Id"
    Description: The ID of your existing VPC (e.g., vpc-0343606e)
  PrivateSubnet1ACIDR:
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/19
    Description: CIDR block for private subnet 1A located in Availability Zone 1
    Type: String
  PrivateSubnet2ACIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.32.0/19
    Description: CIDR block for private subnet 2A located in Availability Zone 2
    Type: String
  AdministratorName:
    ConstraintDescription: Must be a valid name with 2 - 64 characters.
    MinLength: '2'
    MaxLength: '64'
    Type: String
  AdministratorEmailID:
    Type: String
    AllowedPattern: ([a-zA-Z0-9_+\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)
    ConstraintDescription: Must be a valid email address.
  AdministratorCompany:
    Default: None
    Type: String
    ConstraintDescription: Must be a valid company name with 2 - 64 characters.
    MinLength: '2'
    MaxLength: '64'
    Description: By entering the Name, Email Address and Company (if applicable) above
      you agree to terms and conditions outlined in the product End User License Agreement
      (https://www.barracuda.com/legal/software_license_agreement) and Privacy Policy
      (https://www.barracuda.com/legal/privacy).
  ScalingMinSize:
    Description: Enter the minimum number of WAF instances (1-20) to be available
      in the AutoScale Group
    Default: '1'
    ConstraintDescription: Must be a number between 1-20
    Type: Number
    MaxValue: '20'
    MinValue: '1'
  ScalingMaxSize:
    Description: Enter the maximum number of WAF instances (2-20) that can be created
      in the AutoScale Group
    Default: '4'
    ConstraintDescription: Must be a number between 2-20.
    Type: Number
    MaxValue: '20'
    MinValue: '2'
  NotificationEmail:
    Description: Enter a valid email address to send AutoSclaing Event Notifications
    Type: String
    AllowedPattern: ([a-zA-Z0-9_+\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)
    ConstraintDescription: Must be a valid email address.
  WAFServiceName:
    Description: Specify the Service Name to be configured on the Barracuda Web Application
      Firewall. This string can include numbers, lowercase letters, and hyphens (-). It cannot start or end with a hyphen (-)
    AllowedPattern: "^$|[0-9a-z-]*"
    MinLength: '2'
    MaxLength: '64'
    Type: String
  WAFServicePort:
    Description: Specify the Service Port to be configured on the Barracuda Web Application
      Firewall. This the port that is exposed to the outside world. Default is 80.
    Default: '80'
    ConstraintDescription: Must be a valid port number (1-65535).
    Type: Number
    MaxValue: '65535'
    MinValue: '1'
  AppServerIP:
    Description: Specify the Server IP (inside the VPC) to be configured on the Barracuda
      Web Application Firewall; alternatively, you can also enter the FQDN of the
      instance or a downstream ELB to connect to.
    ConstraintDescription: Must be a valid IP address or FQDN
    Type: String
  AppServerPort:
    Description: Specify the port number on which the web application responds. This
      is the port that the Barracuda Web Application Firewall will use to connect
      to the application
    ConstraintDescription: Must be a valid port number (1-65535).
    Type: Number
    MaxValue: '65535'
    MinValue: '1'
  QSS3BucketName:
    AllowedPattern: "^$|[0-9a-z-]*"  #^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
      letters, and hyphens (-). It cannot start or end with a hyphen
      (-).
    Default: aws-quickstart
    Description: S3 bucket name for the Quick Start assets. This string can include
      numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start
      or end with a hyphen (-).
    Type: String
  QSS3KeyPrefix:
    AllowedPattern: ^[0-9a-zA-Z-/]*$
    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
      uppercase letters, hyphens (-), and forward slash (/).
    Default: quickstart-barracuda-waf/
    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
      forward slash (/).
    Type: String
  ELBName:
    Default: elb1
    Description: Enter a valid pre-configured Elastic Load Balancer name associated
      to the VPC and Subnet. This is the ELB that will distrubite traffic to the WAF
      Cluster
    Type: String
  WAFInstanceType:
    Default: m4.large
    ConstraintDescription: 'Choose from the following EC2 instance types: m4.large, m4.xlarge, m4.2xlarge'
    Type: String
    Description: Choose the instance type to use for this AutoScale group
    AllowedValues:
      - m4.large
      - m4.xlarge
      - m4.2xlarge
  PublicSubnet1ID:
    Description: PublicSubnet 1 ID
    Type: String
  PublicSubnet2ID:
    Description: PublicSubnet 2 ID
    Type: String
  ElbTargetGroup:
    Default: elb1-trgt-grp
    Description: Enter a valid pre-configured Elastic Load Balancer Target Group name associated
      to the VPC and Subnet.
    Type: String
  DefaultDomain:
    Default: example.com
    Description: 'Enter the default domain '
    MinLength: '3'
    MaxLength: '64'
    Type: String
  ProxyServerIP:
    Description: Enter the IP of your Proxy Server
    Type: String
    Default: ''
  ProxyServerPort:
    Description: Enter the Port of your Proxy Server
    Type: String
    Default: ''
  ProxyServerUsername:
    Description: Enter the Username for your Proxy Server. Leave it empty in case
      you dont have any username for your Proxy Server.
    Type: String
    Default: ''
  ProxyServerPassword:
    Description: Enter the Password for your Proxy Server. Leave it empty in case
      you dont have any password for your Proxy Server.
    Type: String
    Default: ''
  WAFLicenseModel:
    Description: Select the proper licensing type for your deployment. The options are "Bring Your Own License (BYOL)" or "Pay as You Go (PAYG)". The default is BYOL.
    Type: String
    AllowedValues:
      - 'BYOL'
      - 'PAYG'
    Default: 'BYOL'
Mappings:
  RegionMap:
    us-east-1:
      PAYG: ami-04f0a227aebdc7f98
      BYOL: ami-03fe3d14505dfefdc
    us-east-2:
      PAYG: ami-0fd76f5222cdf861b
      BYOL: ami-0db89527496f6a87c
    us-west-1:
      PAYG: ami-0093cec155775c3d5
      BYOL: ami-0905e9dc8bb4b91c3
    us-west-2:
      PAYG: ami-0632b7e34009e52b7
      BYOL: ami-070c2823862ff8ea8
    sa-east-1:
      PAYG: ami-0fe8befbac70769dd
      BYOL: ami-0d589d10080d50f15
    ca-central-1:
      PAYG: ami-07da3622b4219a52c
      BYOL: ami-0bbc0d3b5501bb030
    eu-central-1:
      PAYG: ami-06d9354e07474133c
      BYOL: ami-02c48ef8defdf0379
    eu-west-1:
      PAYG: ami-08baefd8fc513db66
      BYOL: ami-0bdc3bc93d8d4d6e2
    eu-west-2:
      PAYG: ami-0dfdd307c88981449
      BYOL: ami-0262b6949aa7f1529
    ap-southeast-1:
      PAYG: ami-04dcc1951b653ef8f
      BYOL: ami-0b7e14f3f77f1f55b
    ap-southeast-2:
      PAYG: ami-05d3bf5b984cf2b4d
      BYOL: ami-01dcf361a2d252a63
    ap-northeast-1:
      PAYG: ami-0b2638d032763db7c
      BYOL: ami-040482863065d9111
    ap-northeast-2:
      PAYG: ami-091252a4458758104
      BYOL: ami-0121574171fcb226a
    ap-south-1:
      PAYG: ami-077e000c1003592b6
      BYOL: ami-0e458de57cabe8f84
  BandwidthScaleUp:
    medium:
      bandwidth: '8750000'
    large:
      bandwidth: '17500000'
    xlarge:
      bandwidth: '35000000'
    xxlarge:
      bandwidth: '65630000'
  BandwidthScaleDown:
    medium:
      bandwidth: '8750000'
    large:
      bandwidth: '17500000'
    xlarge:
      bandwidth: '35000000'
    xxlarge:
      bandwidth: '65630000'
Conditions:
  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
  UsingBYOL: !Not [!Equals [!Ref LicenseBucket, "AWS::NoValue" ]]
  PAYGSelected: !Equals [!Ref WAFLicenseModel, 'PAYG']
Resources:
  BWAFAutoScalingS3AccessRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"
      Policies:
        - PolicyName: BWAFAutoScalingS3AcccessPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Sid: ListBucket
                Effect: Allow
                Action:
                  - s3:ListBucket
                Resource:
                  - !Sub
                    - arn:${AWS::Partition}:s3:::${Bucket}
                    - Bucket: !Ref ClusterBucket
                  - !Sub
                    - arn:${AWS::Partition}:s3:::${Bucket}
                    - Bucket: !Ref BootstrapBucket
              - Sid: GetObject
                Effect: Allow
                Action:
                  - s3:PutObject
                  - s3:GetObject
                  - s3:DeleteObject
                Resource:
                  - !Sub
                    - arn:${AWS::Partition}:s3:::${Bucket}/*
                    - Bucket: !Ref ClusterBucket
                  - !Sub
                    - arn:${AWS::Partition}:s3:::${Bucket}/*
                    - Bucket: !Ref BootstrapBucket
        - PolicyName: CloudWatchLogsFullAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Action:
                  - logs:CreateLogStream
                  - logs:DescribeLogStreams
                  - logs:CreateLogGroup
                  - logs:PutLogEvents
                  - logs:PutRetentionPolicy
                Effect: Allow
                Resource: "*"
        - PolicyName: aws-quick-start-s3-policy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Action:
                  - s3:GetObject
                Resource:
                  !Sub
                  - arn:${AWS::Partition}:s3:::${S3Bucket}/${QSS3KeyPrefix}*
                  - S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
                Effect: Allow
  NotificationTopic:
    Type: AWS::SNS::Topic
    Properties:
      Subscription:
        - Endpoint: !Ref 'NotificationEmail'
          Protocol: email
  AutoScalingS3Bucket:
    Type: AWS::S3::Bucket
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      AccessControl: Private
      VersioningConfiguration:
        Status: Enabled
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      BucketName: !Sub ${EnvironmentName}-${WAFServiceName}-barracuda-autoscaling
  ClusterBucket:
    Type: AWS::S3::Bucket
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      AccessControl: Private
      VersioningConfiguration:
        Status: Enabled
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      BucketName: !Sub ${EnvironmentName}-${WAFServiceName}-barracuda-cluster
  BootstrapBucket:
    Type: AWS::S3::Bucket
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      AccessControl: Private
      VersioningConfiguration:
        Status: Enabled
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      BucketName: !Sub ${EnvironmentName}-${WAFServiceName}-barracuda-bootstrap
  BWAFSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "basic-sg"
      GroupDescription: "Security group for Barracuda CloudGen WAF"
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8002
          ToPort: 8002
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 32575
          ToPort: 32575
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 32576
          ToPort: 32576
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort:
            Ref: WAFServicePort
          ToPort:
            Ref: WAFServicePort
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref PrivateSubnet1ACIDR
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref PrivateSubnet2ACIDR
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: !Ref PrivateSubnet1ACIDR
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: !Ref PrivateSubnet2ACIDR
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !Ref PrivateSubnet1ACIDR
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !Ref PrivateSubnet2ACIDR
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref PrivateSubnet1ACIDR
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref PrivateSubnet2ACIDR
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref PrivateSubnet1ACIDR
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref PrivateSubnet2ACIDR
        - IpProtocol: tcp
          FromPort:
            Ref: AppServerPort
          ToPort:
            Ref: AppServerPort
          CidrIp: !Ref PrivateSubnet1ACIDR
        - IpProtocol: tcp
          FromPort:
            Ref: AppServerPort
          ToPort:
            Ref: AppServerPort
          CidrIp: !Ref PrivateSubnet2ACIDR
  BWAFAutoScalingInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - Ref: BWAFAutoScalingS3AccessRole
  BWAFAutoScaleLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      cfn-lint: { config: { ignore_checks: [ E1019 ] } }
    Properties:
      InstanceMonitoring: true
      AssociatePublicIpAddress: true
      KeyName: !Ref KeyPairName
      ImageId:
        Fn::FindInMap:
          - RegionMap
          - Ref: AWS::Region
          - Ref: WAFLicenseModel
      InstanceType:
        Ref: WAFInstanceType
      IamInstanceProfile:
        Ref: BWAFAutoScalingInstanceProfile
      SecurityGroups:
        - Ref: BWAFSecurityGroup
      UserData:
       Fn::Base64:
          !Sub
          - |
            #!/bin/bash
            if [[ "${WAFLicenseModel}" == "PAYG" ]]; then
              if [[ -n "${BackupFileName}" ]]; then
                echo "<<PAYG with backup>>" > /home/remote/userdata.log
                echo "--stack ${AWS::StackName} --resource BWAFAutoScaleLaunchConfig  --region ${AWS::Region} --vpc ${VPCID} --type ${WAFInstanceType} --s3ClusterBucket ${ClusterBucket} --config ${WAFServiceName}:${WAFServicePort}:${AppServerIP}:${AppServerPort}" >> /home/remote/userdata.log
                /opt/aws/bwaf/aws_autoscale.pl --command init-config --saveSystemDataOnTermination --dumpEC2Details --stack ${AWS::StackName} --resource BWAFAutoScaleLaunchConfig  --region ${AWS::Region} --vpc ${VPCID} --type ${WAFInstanceType} --s3ClusterBucket ${ClusterBucket} --config ${WAFServiceName}:${WAFServicePort}:${AppServerIP}:${AppServerPort}
              else
                echo "<<PAYG, no backup>>" > /home/remote/userdata.log
                echo "--stack ${AWS::StackName} --resource BWAFAutoScaleLaunchConfig  --region ${AWS::Region} --vpc ${VPCID} --type ${WAFInstanceType} --s3ClusterBucket ${ClusterBucket} --config ${WAFServiceName}:${WAFServicePort}:${AppServerIP}:${AppServerPort}" >> /home/remote/userdata.log
                /opt/aws/bwaf/aws_autoscale.pl --command init-config --enableRestoreBackup --saveSystemDataOnTermination --dumpEC2Details --stack ${AWS::StackName} --resource BWAFAutoScaleLaunchConfig  --region ${AWS::Region} --vpc ${VPCID} --type ${WAFInstanceType} --s3ClusterBucket ${ClusterBucket} --s3LicensingBucket ${LicenseBucket} --s3LicensingFolder ${CudaLicenseSubDir} --s3BootstrappingBucket ${BootstrappingS3Bucket} --s3BackupFolder ${CudaBackupSubDir} --configBackup ${BackupFileName}
              fi
            else
              if [[ -n "${BackupFileName}" ]]; then
                echo "<<BYOL with backup>>" > /home/remote/userdata.log
                /opt/aws/bwaf/aws_autoscale.pl --command init-config --saveSystemDataOnTermination --dumpEC2Details --stack ${AWS::StackName} --resource BWAFAutoScaleLaunchConfig  --region ${AWS::Region} --vpc ${VPCID} --type ${WAFInstanceType} --s3ClusterBucket ${ClusterBucket} --licensebucket ${LicenseBucket} --subdirectory ${CudaLicenseSubDir} --defaultdomain ${DefaultDomain} --config ${WAFServiceName}:${WAFServicePort}:${AppServerIP}:${AppServerPort}
              else
                echo "<<BYOL, no backup>>" > /home/remote/userdata.log
                /opt/aws/bwaf/aws_autoscale.pl --command init-config --saveSystemDataOnTermination --dumpEC2Details --stack ${AWS::StackName} --resource BWAFAutoScaleLaunchConfig  --region ${AWS::Region} --vpc ${VPCID} --type ${WAFInstanceType} --s3ClusterBucket ${ClusterBucket} --licensebucket ${LicenseBucket} --subdirectory ${CudaLicenseSubDir} --defaultdomain ${DefaultDomain} --s3BootstrappingBucket ${BootstrappingS3Bucket} --s3BackupFolder ${CudaBackupSubDir} --configBackup ${BackupFileName}
              fi
            fi
          - WAFServerIP: curl http://169.254.169.254/latest/meta-data/local-ipv4
  BWAFAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MinSize:
        Ref: ScalingMinSize
      HealthCheckGracePeriod: 1200
      MaxSize:
        Ref: ScalingMaxSize
      VPCZoneIdentifier:
        - !Ref PublicSubnet1ID
        - !Ref PublicSubnet2ID
      LaunchConfigurationName:
        Ref: BWAFAutoScaleLaunchConfig
      TargetGroupARNs:
        - Ref: ElbTargetGroup
      HealthCheckType: EC2
    UpdatePolicy:
      AutoScalingRollingUpdate:
        PauseTime: PT10M
        MaxBatchSize: 1
        MinInstancesInService:
          Ref: ScalingMinSize
  BWAFScaleUpPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      ScalingAdjustment: 1
      Cooldown: '300'
      AutoScalingGroupName:
        Ref: BWAFAutoScalingGroup
      AdjustmentType: ChangeInCapacity
  BWAFScaleDownPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      ScalingAdjustment: -1
      Cooldown: '300'
      AutoScalingGroupName:
        Ref: BWAFAutoScalingGroup
      AdjustmentType: ChangeInCapacity
  NetworkInAlarmHigh:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: 5
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Dimensions:
        - Name: AutoScalingGroupName
          Value:
            Ref: BWAFAutoScalingGroup
      AlarmActions:
        - Ref: BWAFScaleUpPolicy
      Statistic: Average
      Threshold: 9175040
      AlarmDescription: Scale-up if the NetworkIn throughput > 70% of max throughput
        for 5 minutes
      Namespace: AWS/EC2
      Period: 300
      MetricName: NetworkIn
  NetworkInAlarmLow:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: 5
      ComparisonOperator: LessThanOrEqualToThreshold
      Dimensions:
        - Name: AutoScalingGroupName
          Value:
            Ref: BWAFAutoScalingGroup
      AlarmActions:
        - Ref: BWAFScaleDownPolicy
      Statistic: Average
      Threshold: 5242880
      AlarmDescription: Scale-down if the NetworkIn throughput < 50% of max throughput
        for 10 periods of 15 minutes
      Namespace: AWS/EC2
      Period: 900
      MetricName: NetworkIn
  NetworkOutAlarmHigh:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: 5
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Dimensions:
        - Name: AutoScalingGroupName
          Value:
            Ref: BWAFAutoScalingGroup
      AlarmActions:
        - Ref: BWAFScaleUpPolicy
      Statistic: Average
      Threshold: 9175040
      AlarmDescription: Scale-up if the NetworkOut throughput > 70% of max throughput
        for 5 minutes
      Namespace: AWS/EC2
      Period: 60
      MetricName: NetworkOut
  NetworkOutAlarmLow:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: 5
      ComparisonOperator: LessThanOrEqualToThreshold
      Dimensions:
        - Name: AutoScalingGroupName
          Value:
            Ref: BWAFAutoScalingGroup
      AlarmActions:
        - Ref: BWAFScaleDownPolicy
      Statistic: Average
      Threshold: 5242880
      AlarmDescription: Scale-down if the NetworkOut throughput < 50% of max throughput
        for 10 periods of 15 minutes
      Namespace: AWS/EC2
      Period: 900
      MetricName: NetworkOut
  CPUAlarmHigh:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: 5
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Dimensions:
        - Name: AutoScalingGroupName
          Value:
            Ref: BWAFAutoScalingGroup
      AlarmActions:
        - Ref: BWAFScaleUpPolicy
      Statistic: Average
      Threshold: 85
      AlarmDescription: 'Scale out if WAF CPU > 85% after 5 successive intervals of
        60 seconds '
      Namespace: AWS/EC2
      Period: 60
      MetricName: CPUUtilization
  CPUAlarmNormal:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: 5
      ComparisonOperator: LessThanOrEqualToThreshold
      Dimensions:
        - Name: AutoScalingGroupName
          Value:
            Ref: BWAFAutoScalingGroup
      AlarmActions:
        - Ref: BWAFScaleDownPolicy
      Statistic: Average
      Threshold: 60
      AlarmDescription: Scale in WAF if CPU < 60% for 10 successive intervals of 15
        minutes
      Namespace: AWS/EC2
      Period: 900
      MetricName: CPUUtilization
